fix: Select in multiple mode has wrong padding

--- a/components/select/style/multiple.less
+++ b/components/select/style/multiple.less
@@ -127,13 +127,13 @@
   .@{select-prefix-cls}-selection-placeholder {
     position: absolute;
     top: 0;
-    left: @control-padding-horizontal;
+    left: @input-padding-horizontal;
     height: @select-height-without-border;
     line-height: @select-height-without-border;
     transition: all 0.3s;
 
     .@{select-prefix-cls}-rtl& {
-      right: @control-padding-horizontal;
+      right: @input-padding-horizontal;
       left: auto;
     }
   }
